# os-services

./: .gitignore  README-dbaas.rst  README-swift.rst  README.rst  RELEASE_NOTES  build.gradle  check.gradle  requirements.txt  setup.cfg  setup.py  subproject-requirements.txt  test-requirements.txt  tox.ini
osa/dbaas_ui/: MANIFEST.in  setup.cfg  setup.py
osa/dbaas_ui/dbaas_ui/: dashboard.py  forms.py  panel.py  tables.py  tabs.py  tests.py  urls.py  views.py
osa/dbaas_ui/dbaas_ui/backups/: panel.py  tables.py  urls.py  views.py
osa/dbaas_ui/dbaas_ui/backups/templates/backups/: _backup_detail_overview.html
osa/dbaas_ui/dbaas_ui/instances/: panel.py  tables.py  tabs.py  urls.py  views.py
osa/dbaas_ui/dbaas_ui/instances/templates/instances/: _detail_overview_cassandra.html  (+7 more)
osa/dbaas_ui/dbaas_ui/shortcuts/: db_capability.py  forms.py  panel.py  tables.py  tabs.py  tasks.py  urls.py  views.py
osa/dbaas_ui/dbaas_ui/shortcuts/workflows/: __init__.py  workflows.py
osa/dbaas_ui/dbaas_ui/templates/database/: _backup_detail_overview.html  _backups_tab.html  _create_backup.html  _create_database.html  _create_user.html  _delete_backup.html  _delete_database.html  _delete_instance.html  _delete_user.html  _detail_overview_cassandra.html  _detail_overview_couchbase.html  _detail_overview_mongodb.html  _detail_overview_mysql.html  _detail_overview_postgresql.html  _detail_overview_redis.html  _instance_detail_overview.html  _instances_tab.html  _manage_root_no_context.html  _manage_user_no_context.html  _rename_instance.html  _resize_instance.html  _resize_volume.html  _restart_instance.html  _shortcuts_tab.html  create_backup.html  create_database.html  create_user.html  delete_backup.html  delete_database.html  delete_instance.html  delete_user.html  manage_root_no_context.html  manage_user_no_context.html  rename_instance.html  resize_instance.html  resize_volume.html  restart_instance.html  upgrade_instance.html
osa/dbaas_ui/dbaas_ui/workflows/: workflows.py
osa/dbaas_ui/enabled_ui/: _1715_project_database_dbaas_ui_panel.py  _4114_database_ui_dashboard.py  _4115_database_ui_shortcuts.py  _4116_database_ui_instances.py  _4117_database_ui_backups.py
(+466 files in other folders)
