[metadata]
name = os-services
summary = Openstack Services for deployment on KVM on POWER
description-file =
    README.rst
author = IBM
author-email =
home-page =
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[pbr]
warnerrors = True

[wheel]
universal = 1

