[metadata]
name = dbaas_ui
summary = Install Trove DBaaS User Interface with pip
author = IBM
author-email = jdwald@us.ibm.com,marvlevi@us.ibm.com
home-page = https://github.com/open-power-ref-design-toolkit/os-services
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages = dbaas_ui

[compile_catalog]
directory = dbaas_ui/locale
domain = dbaas_ui

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext

[bdist_wheel]
universal = 0
